public/css/index.css
/* ... */
figure img,
img.thumbnail,
li.postlist-item a picture img {
	border-radius: var(--border-radius); 
}
li.postlist-item a picture img {
	aspect-ratio: 16 / 9;
	object-fit: cover;
}
li.postlist-item a picture img:hover {
	opacity: .8;
}
img {
	width: 100%;
	height: auto;
}

figure.stamp {
	display:flex;
	flex-direction: column;
	align-items: center;
}

figure.stamp img {
	width: 300px; 
	max-width: 100%; 
	height:auto; 
	margin-left: auto; 
	margin-right:auto;
}

iframe.yt-shortcode {
	aspect-ratio: 16 / 9;
	width: 100%;
}

/* https://www.a11yproject.com/posts/how-to-hide-content/ */
.visually-hidden {
	clip: rect(0 0 0 0);
	clip-path: inset(50%);
	height: 1px;
	overflow: hidden;
	position: absolute;
	white-space: nowrap;
	width: 1px;
}

p:last-child {
	margin-bottom: 0;
}
p {
	line-height: 1.5;
}

li {
	line-height: 1.5;
}

a[href] {
	color: var(--text-color-link);
}
a[href]:visited {
	color: var(--text-color-link-visited);
}
a[href]:hover,
a[href]:active {
	color: var(--text-color-link-active);
}

/* article h2 + p::first-letter {
    font-size: 250%;
  	padding: 0px;
  	margin-right: 6px;
  	float: left;
    font-weight: bold;
} */

article h2.post-deck {
	color: #989898;
	text-align: center;
	margin: 2.4rem auto 2.2rem;
	/* margin-block-end: 16vh; */
}

span.text-italic {
	/* font-family: var(--font-family-serif); */
	font-style: italic;
	/* font-size: 116%; */
}

.text-gradient {
	background: -webkit-gradient(linear, left top, right top, from(#3668cc), to(#7500ed));
    background: linear-gradient(to right, #3668cc 50%, #7500ed 100%);
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: rgba(0, 0, 0, 0.15);
}

.text-gradient {
	background-image: 
    linear-gradient(
      to right in oklab, 
      oklch(53.78% 0.2742 262.342) 0%, oklch(53.78% 0.2742 262.342) 31% 31%, oklch(53.78% 0.3063 293.163) 100%);
}

section.hero,
.about-page,
.postlist-container {
	display: block;
	gap: 2rem;
	margin-bottom: 2rem;
}
section.hero h2,
h2.post-deck {
	margin-top: 0px;
	max-width: 48ch;
	font-size: var(--font-size-xl);
	font-style: italic;
	font-family: var(--font-family-cedar);
}

@media screen and (min-width: 900px) {
	section.hero h2,
	h2.post-deck {
		font-size: var(--font-size-xxl)
	}
}

section.hero,
section.featured-posts,
section.featured-case-study {
	margin-block-end: 6rem;
}

section.featured-case-study {
	display: flex;
	flex-direction: column;
	border-radius: var(--border-radius);
}

section.featured-case-study .featured-case-study-image img {
	object-fit: cover;
	height: 12rem;
	border-radius: var(--border-radius) var(--border-radius) 0 0;
}

.featured-case-study-content {
	padding: 3.2rem 1rem 3.8rem;
}

.featured-case-study-content h2:first-of-type {
	margin-block-start: 2rem;
}

.featured-case-study-content h3 {
	margin-block-start: 0px;
	font-size: var(--font-size-md);
	color: var(--color-midnight-60)
}

@media screen and (min-width: 650px) {
	section.featured-case-study {
		display: grid;
		grid-template-columns: repeat(2, 1fr);
		gap: 2rem;
	}
	section.featured-case-study .featured-case-study-image img {
		height: 100%;
		width: 100%;
		border-radius: var(--border-radius) 0 0 var(--border-radius);
	}
	.featured-case-study-content {
		padding-inline: 0px 2rem;
	
	}
}

section.featured-case-study {
	background-color: var(--color-aside)
}

.image-gallery-grid {
	gap: 2rem;
	grid-template-columns: 1fr;
	grid-auto-flow: dense;
}

section.hero .hero-details {
	display: flex;
	flex-direction: column;
	align-items: center;
}

section.hero .hero-details {
	max-width: 60ch;
}

article header.post-header {
	margin-block-end: 6rem;
}



article header.post-header {
	display: grid;
	grid-template-columns: 1fr;
	gap: 2rem;
}

article header.post-titles {
	display: flex;
	flex-direction: column;
	gap: 2rem;
}

@media screen and (min-width: 900px) {
	article header.post-header {
		grid-template-columns: 1fr 1fr;
	}
}

@media screen and (min-width: 1380px) {
	article header.post-header,
	article.case-study-metadata {
		margin-inline: -8rem;
	}
}

/* view transitions */

@media not (prefers-reduced-motion: reduce) {
	article header.post-header { view-transition-name: post-header;}
	.featured-case-study { view-transition-name: post-header;}
}

.postlist-container {
	display: grid;
	grid-template-rows: repeate(2, 1fr);
}
.postlist-container .postlist {
	grid-row: 2;
}
.postlist-container .post-counter{
	grid-row: 1;
}

ul.post-tags {
	column-count: auto;
	column-width: 10rem;
	padding-inline: 0px;
}

ul.post-tags li {
	list-style-type: none;
}

@media screen and (min-width: 650px) {
	.postlist-container {
		grid-template-columns: repeat(3, 1fr);
		gap: 2rem;
	}
	.postlist-container .postlist {
		grid-column: 1 / 3;
		grid-row: 1;
	}
	.postlist-container .post-counter{
		grid-column: 3 / 4;
		grid-row: 1;
	}
	section.hero h2,
	article h2.post-deck {
		font-size: var(--font-size-xl);
		/* margin-block-end: 16vh; */
	}
	.about-page section.bio-details {
		display: grid;
		grid-template-columns: repeat(2, 1fr);
		gap: 2rem;
	}
	.image-thumbnail-grid {
		grid-template-columns: repeat(3, 1fr);
	}
	.image-gallery-grid {
		grid-template-columns: repeat(2, 1fr);
	}
}
@media screen and (min-width: 900px) {
	section.hero,
	.about-page,
	.postlist-container {
		display:grid;
		grid-template-columns: repeat(3, 1fr);
	}
	.about-page section.bio-details {
		display: block;
	}
	section.hero h2,
	article h2.post-deck,
	.about-page section.bio,
	.postlist-container .postlist {
		grid-column: 1 / 3;
	}
	section.hero .hero-details,
	.about-page section.bio-details,
	.postlist-container .post-counter {
		grid-column: 3 / 4;
	}
	.image-thumbnail-grid {
		grid-template-columns: repeat(4, 1fr);
	}
}
/* ... */

